...
                        style: kSubtitleStyle.copyWith(
                          fontSize: getProportionateScreenWidth(18),
                          fontWeight: FontWeight.w600,
                        ),
                      ),
                      Text(
                        "View All",
                        style: kSubtitleStyle.copyWith(
                          color: Colors.grey,
                          fontSize: getProportionateScreenWidth(16),
                          fontWeight: FontWeight.w500,
                        ),
                      )
...
